# messner

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindGMP.cmake  FindISL.cmake  FindMPFR.cmake  FindREflex.cmake  GitRevision.cmake  LibUtils.cmake  README.md
include/: CMakeLists.txt
include/messner/Dialect/: CMakeLists.txt
include/messner/Dialect/EKL/: CMakeLists.txt  Enums.h  Enums.td
include/messner/Dialect/EKL/Analysis/: AbstractTypeChecker.h  Casting.h  Extents.h  LocalTypeChecker.h  Number.h  TypeCheckingAdaptor.h
include/messner/Dialect/EKL/IR/: Attributes.h  Attributes.td  Base.h  Base.td  CMakeLists.txt  DiagHandler.h  EKL.h  Ops.h  Ops.td  Traits.h  Traits.td  TypeUtils.h  Types.h  Types.td
include/messner/Dialect/EKL/Interfaces/: CMakeLists.txt  ContiguousType.h  ContiguousType.td  ExpressionOp.h  ExpressionOp.td  Interfaces.h  Interfaces.td  TypeCheckOpInterface.h  TypeCheckOpInterface.td
include/messner/Dialect/EKL/Transforms/: CMakeLists.txt  Passes.h  Passes.td  TypeCheck.h
include/messner/Dialect/Utils/: Closures.h
include/mlir/Concepts/: Concepts.h  Concepts.td  Fluent.h  Inference.td  Translation.h
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/CFDlang/: CMakeLists.txt  Passes.h  Passes.td
include/mlir/Dialect/CFDlang/Concepts/: Atom.h  Atom.td
include/mlir/Dialect/CFDlang/IR/: Base.h  Base.td  CMakeLists.txt  Interfaces.h  Interfaces.td  Ops.h  Ops.td  Types.h  Types.td
include/mlir/Dialect/TeIL/: CMakeLists.txt  Enums.h  Enums.td
include/mlir/Dialect/TeIL/Concepts/: Atom.h  Atom.td  AtomSize.h  Natural.h  Natural.td  Scalar.h  Scalar.td  Shape.h  Shape.td
include/mlir/Dialect/TeIL/IR/: Base.h  Base.td  CMakeLists.txt  Interfaces.h  Interfaces.td  Ops.h  Ops.td  Types.h  Types.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/CFDlang/: CMakeLists.txt
lib/Dialect/CFDlang/IR/: Base.cpp  Interfaces.cpp  Ops.cpp  Types.cpp
lib/Dialect/CFDlang/Transforms/: Codegen.cpp  ContractionFactorization.cpp  Kernelize.cpp  PassDetail.h
lib/Dialect/EKL/: CMakeLists.txt  Enums.cpp
lib/Dialect/EKL/Analysis/: AbstractTypeChecker.cpp  CMakeLists.txt  Casting.cpp  Extents.cpp  LocalTypeChecker.cpp  Number.cpp  TypeCheckingAdaptor.cpp
lib/Dialect/EKL/IR/: Attributes.cpp  Base.cpp  CMakeLists.txt  DiagHandler.cpp  Ops.cpp  Traits.cpp  Types.cpp
lib/Dialect/EKL/Interfaces/: CMakeLists.txt  ContiguousType.cpp  ExpressionOp.cpp  TypeCheckOpInterface.cpp
lib/Dialect/EKL/Transforms/: CMakeLists.txt  DecayNumber.cpp  Homogenize.cpp  ImplicitCast.h  Lower.cpp  TypeCheck.cpp
lib/Dialect/TeIL/: CMakeLists.txt  Enums.cpp
lib/Dialect/TeIL/Concepts/: AtomSize.cpp
lib/Dialect/TeIL/IR/: Base.cpp  Interfaces.cpp  Ops.cpp  Types.cpp
lib/Dialect/Utils/: CMakeLists.txt  Closures.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/CFDlang/: canonicalize.mlir  program.mlir  symbols.mlir
test/Dialect/EKL/: attributes-invalid.mlir  attributes.mlir
test/Dialect/TeIL/: number.mlir
test/Dialect/cfdlang/: atoms.mlir  scalar.mlir
test/cfdlang/: program.mlir  symbols.mlir
test/evp-opt/: evp-opt.mlir  evpt-opt.mlir
test/evp-translate/: evp-translate.mlir
tools/: CMakeLists.txt
tools/evp-lsp-server/: CMakeLists.txt  evp-lsp-server.cpp
tools/evp-opt/: CMakeLists.txt  evp-opt.cpp
tools/evp-translate/: CMakeLists.txt  evp-translate.cpp
tools/messner/: CMakeLists.txt  messner.cpp
